--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
   test-project:
     name: Unit tests
     runs-on: ubuntu-latest
+    outputs:
+      CODEARTIFACT_AUTH_TOKEN: ${{ steps.get-codeartifact-token.outputs.CODEARTIFACT_AUTH_TOKEN }}
 
     steps:
 
@@ -26,8 +28,21 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
-          java-version: '19'
+          java-version: '17'
           cache: 'maven'
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Login to AWS CodeArtifact
+        id: get-codeartifact-token
+        run: echo "CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain velco --domain-owner 825794536530 --region eu-west-3 --query authorizationToken --output text)" >> $GITHUB_OUTPUT
+
       - name: Run Tests
-        run: mvn -B test
+        run: mvn -B test -s ./.mvn/settings.xml
+        env:
+          CODEARTIFACT_AUTH_TOKEN: ${{ steps.get-codeartifact-token.outputs.CODEARTIFACT_AUTH_TOKEN }}
