--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Login to AWS CodeArtifact
         id: get-codeartifact-token
-        run: echo "CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain ${{ secrets.AWS_CODEARTIFACT_DOMAIN }} --domain-owner ${{ AWS_ACCOUNT }} --region ${{ AWS_REGION }} --query authorizationToken --output text)" >> $GITHUB_OUTPUT
+        run: echo "CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain ${{ secrets.AWS_CODEARTIFACT_DOMAIN }} --domain-owner ${{ secrets.AWS_ACCOUNT }} --region ${{ secrets.AWS_REGION }} --query authorizationToken --output text)" >> $GITHUB_OUTPUT
 
       - name: Run Tests
         run: mvn -B test -s ./.mvn/settings.xml
