ass sonarcloud analysis

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <description>laurent</description>
     <properties>
         <java.version>17</java.version>
+        <sonar.organization>lcube45</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
