--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>laurent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>build</artifactId>
+    <version>0.0.1</version>
     <packaging>war</packaging>
     <name>laurent</name>
     <description>laurent</description>
