--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
         run: echo "CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain ${{ secrets.AWS_CODEARTIFACT_DOMAIN }} --domain-owner ${{ secrets.AWS_ACCOUNT }} --region ${{ secrets.AWS_REGION }} --query authorizationToken --output text)" >> $GITHUB_OUTPUT
 
       - name: Build with Maven
-        run: mvn -B package -DskipTests --file pom.xml -s ./.mvn/settings.xml
+        run: mvn -B package -s ./.mvn/settings.xml -DskipTests --file pom.xml
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
