--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Get current version
         id: get-version
-        run: echo "VERSION=$(mvn org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression=project.version)" >> $GITHUB_OUTPUT
+        run: echo "VERSION=$(cat pom.xml | grep "^    <version>.*</version>$" | awk -F'[><]' '{print $3}')" >> $GITHUB_OUTPUT
 
       - name: Debug
         run: echo ${{ steps.get-version.outputs.VERSION }}
