--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,7 +63,10 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build-${{ steps.get-version.outputs.VERSION }}
-          path: target/build-${{ steps.get-version.outputs.VERSION }}.war
+          path: |
+            target/build.war
+            scripts/
+            appspec.yml
 
   release-project:
     name: Release
@@ -91,3 +94,36 @@ jobs:
           artifacts: build-${{ needs.build-project.outputs.VERSION }}.zip
           artifactContentType: application/zip
           skipIfReleaseExists: true
+
+  deploy-project:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: release-project
+
+    steps:
+
+      - name: Download latest release asset
+        id: download-release-asset
+        uses: robinraju/release-downloader@v1.7
+        with:
+          latest: true
+          fileName: "*.zip"
+
+      - name: Rename artefact
+        run: mv build-${{ steps.download-release-asset.outputs.tag_name }}.zip build.zip
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Deploy asset to AWS s3
+        run: |
+          aws s3 rm s3://${{ secrets.AWS_S3_BUCKET }}/ --recursive
+          aws s3 cp build.zip s3://${{ secrets.AWS_S3_BUCKET }} --recursive
+
+      - name: Launch AWS codedeploy deployment
+        run : |
+          aws deploy create-deployment --application-name poc-inetum --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name HelloWorldDeploymentGroup --s3-location bucket=poc-devops-backend,bundleType=zip,key=build.zip
