debug deploy job

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Rename artefact
         run: |
           mv build-${{ steps.download-release-asset.outputs.tag_name }}.zip build.zip
+          pwd
           ls -al
 
       - name: Configure AWS Credentials
@@ -33,7 +34,7 @@ jobs:
       - name: Deploy asset to AWS s3
         run: |
           aws s3 rm s3://${{ secrets.AWS_S3_BUCKET }}/ --recursive
-          aws s3 cp build.zip s3://${{ secrets.AWS_S3_BUCKET }} --recursive
+          aws s3 cp ./build.zip s3://${{ secrets.AWS_S3_BUCKET }}
 
       - name: Launch AWS codedeploy deployment
         run : |
